2017-12-14  vs. 1.0-4 - Ivan Bezerra Allaman <ivanalaman@gmail.com>
  * Bug fixed. Substitute shiny-examples/myapp by shiny/app in res object in server file.
  * Bug fixed. Question object not interpreted correctly in server file.
  * Bug fixed. Substitute includeMarkdown by markdownToHTML function of the markdown package. Include package as import.
  * Change depends! Now, shiny and exams as depends. 

2017-11-23  vs. 1.0-3 - Ivan Bezerra Allaman <ivanalaman@gmail.com>
  * Finished transformation app in a r package.

2016-11-23  vs. 1.0-2 - Ivan Bezerra Allaman <ivanalaman@gmail.com>
  * Making a R package.

2015-05-26  vs. 1.0-1 - Ivan Bezerra Allaman  <ivanalaman@gmail.com>
  * Major changes in the application.

2015-02-03  vs. 1.0-0 - Ivan Bezerra Allaman  <ivanalaman@gmail.com>
  * Initial commit. Adding app in the bitbucket.